Responsive CSS: Only apply mobile responsive fix to direct full-width children.
The top-level container has padding, then the direct child needs a negative margin to ensure it's still edge-to-edge. In the case that there's a third-level full-width element, that does not need to negative margin fix. Applying it caused a layout breakage on small screens.

Props multidots1896 for the initial patch, himshekhar07, kajalgohel, nidhidhandhukiya, adamwood, and viralsampat for reporting and debugging.
See #153.
Fixes https://meta.trac.wordpress.org/ticket/6603, https://meta.trac.wordpress.org/ticket/6587.

--- a/source/wp-content/themes/wporg-main-2022/src/style/style.scss
+++ b/source/wp-content/themes/wporg-main-2022/src/style/style.scss
@@ -82,7 +82,7 @@ html[dir="rtl"] :where([style*="border-right-color"]) {
 	}
 
 	/* Ensure nested full-alignment items are still full-width */
-	.entry-content.entry-content > .alignfull .alignfull {
+	.entry-content.entry-content > .alignfull > .alignfull {
 		margin-left: calc(var(--wp--preset--spacing--60) * -1) !important;
 		margin-right: calc(var(--wp--preset--spacing--60) * -1) !important;
 	}
